--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
-  version: 1031
+  version: 1045
   # use local file as default
-  #wsdl_file: 'http://developer.ebay.com/webservices/1031/eBaySvc.wsdl'
+  #wsdl_file: 'https://developer.ebay.com/webservices/1045/eBaySvc.wsdl'
   routing: default
   siteid: 0
   preload: false
